# TinyRay

./: AppWindow.cpp  AppWindow.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  ImageIO.cpp  Light.cpp  Light.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Primitive.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Resource.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  TestApplication.cpp  TestApplication.h  TinyRay.rc  TinyRay.vcxproj  TinyRay.vcxproj.filters  TinyRayMain.cpp  TinyRayMain.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  targetver.h
x64/Debug/: vc140.idb
x64/Debug/TinyRay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TinyRay.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
x64/Release/: TinyRay.res
x64/Release/TinyRay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TinyRay.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
